# ChangeLog for net-libs/pacparser
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/pacparser/ChangeLog,v 1.1 2013/11/26 05:29:31 bicatali Exp $

*pacparser-1.3.1 (26 Nov 2013)

  26 Nov 2013; Sébastien Fabbro <bicatali@gentoo.org>
  +files/pacparser-1.3.1-makefile.patch, +metadata.xml, +pacparser-1.3.1.ebuild:
  Initial import