@@ -4,11 +4,11 @@ DESCRIPTION=Library to parse proxy auto-config files
 EAPI=5
 HOMEPAGE=http://code.google.com/p/pacparser/
 IUSE=doc python python_targets_python2_6 python_targets_python2_7 python_targets_python3_2 python_targets_python3_3
-KEYWORDS=~amd64 ~x86
+KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux
 LICENSE=LGPL-3
 RDEPEND=python? ( python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_python3_2? ( >=dev-lang/python-3.2.5-r2:3.2 ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_targets_python3_2(-)?,python_targets_python3_3(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-),-python_single_target_python3_2(-),-python_single_target_python3_3(-)] )
 REQUIRED_USE=python? ( || ( python_targets_python2_6 python_targets_python2_7 python_targets_python3_2 python_targets_python3_3 ) )
 SLOT=0
 SRC_URI=http://pacparser.googlecode.com/files/pacparser-1.3.1.tar.gz
 _eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	multibuild	576bde67ccb00fe7175a23755deb2e66	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-r1	1356c4bb8f56765cff4b74c0128d2a4f	python-utils-r1	30d5d7986d3f80d0f2c2726366426859	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=55cc4e5d827913f87dc6f7172cf8a08c
+_md5_=bd3983c82ef6fe4cd6acf6de01c3b45d
