@@ -3,13 +3,13 @@ Hash: SHA256
 
 AUX pacparser-1.3.1-makefile.patch 2265 SHA256 2e5b9fa7fbaad4ae818a608b6d5b667ee442a9a49f5b0f558361ea13dbf86670 SHA512 6812dc1482554053fedf0f522260cc5da6b5f9bfa9e1ccf51bb5d1ad92c3663122460c6d41f8c3a2318b37e251ec8bf5849f3f4140d2f6fd647d5be61544af51 WHIRLPOOL 85e985b0f4d28b9288b67741499f0bf2236fa0d2c3da142cfb9d365ccd1b3ce7548a427d0d23bc8838dc8ef333a82872f25088604b81d8e71d8ce4dac0731081
 DIST pacparser-1.3.1.tar.gz 1229362 SHA256 040fb94c420f6aaad295b0b60cf1659f996fee1997c332bec2a6390955276585 SHA512 20295667d92eb5385429c085c14ca8dc1ba216487ff474304433f99119216934be2dd1647452173418de31f5345679dd7159eafd331e40a2b87564f878d31349 WHIRLPOOL 47caf428b4574d9fbb40cffe46afb38cc6bb786382805754f1653e3d554af60e695e1718902c94822b229b7fb4f9748257745a1b3faedfa02cc7b06ba457768f
-EBUILD pacparser-1.3.1.ebuild 1339 SHA256 c120819ff774e9e51b3b79953e93b2900afece4c830e2b26d6f428d445c0f767 SHA512 16276c22d92515ed4dcb4d7ee8e0afcc69786dff9ec490e96c77cb4ae2ad431c2647182cd71a49d39d11f6ff93a4bff902bcf3d5aa07f84f7e4cb57d481aef04 WHIRLPOOL 1560cf0aa839ca79cae08de1caec6aa2a52c3ecbac8a3f0fc999646abc02ef970b44144801bf4b33cbd6ba98443d860fb0fb95da0234aaa947b9365bb2cc1caa
-MISC ChangeLog 396 SHA256 28ef8acab05d18e209c275817851231ee2a298d6672e749e23414fddab95b311 SHA512 68ad9840ddd2d08187cc350ec91b05fdbf5e79b692ca0aeb2f2fc7b0bfa69442446a88d4c6f9f061146d9b83ad86223951aa78b19ac2735c4133a22b217a22bb WHIRLPOOL d21d0bd519c9cce1ebb0b6a508b1cccea473ef7781debe752255c1f059af12ccf0893d5e14511fa71cee56623afd6c244784fc1c0f4a8a4750d59fec66aea35d
+EBUILD pacparser-1.3.1.ebuild 1458 SHA256 d6ba00abf9d6c09045f9cbad2cf87152183a3f80328fd9c81babbfc8ec04bfbf SHA512 f6d63467f49e424f01720a56a8263a7edab981d71d7b794d31ba56b964a8432e4803306aa7994f49bd9684e33e5bc8a0a4a136fdef1364f1e6ffdf84530021b4 WHIRLPOOL 48fddf6e8ae0a7391f1eeb4fe5844c3331472cb91030b896e8eb2b19c5afa2f37cb3d5a3972262eb3aecf76962b5abd5986621cef39aeb1780ffe76feb286267
+MISC ChangeLog 508 SHA256 7b8de964e3a65e18d0be1979312307d496d45b2afc6e6dedb1dd21454a40f93b SHA512 ae40e61442cc09396a96005e0809f80ebc766cc6156a736f21e98e8de2943583b0d4fe2555f0e3ec3d29e17313ec0fa80d898e9cd959cd82ffe5caaeb070c159 WHIRLPOOL 9ff93ebf25e0ba60f3a2976af5b647a202bb35ead93e15799cd5284750bbdfc9992c243b456d7cd5e87d6a40575e915017fe4e9908d2b9321e33a734384c3508
 MISC metadata.xml 1177 SHA256 42922085030073271f3a8cf8814693c065933cb20d057609259dfd367a70e9cc SHA512 e2165585a32c8ca65215e8f2704ccd9d4ea6e557c3f1ffc5f893c032cb0684fad017b672f4c4f655c84b51b67d85dd0dda07039ef4524484e0496703ce4dcecc WHIRLPOOL 5d32ac45c28bd1cec2167e152bb5e647aa3770748e23a1bdbd289da1b1c63f6b0f19643e64827d322566f7691a06215d17c71ac1d31fa19e6b551ca3a9d4069e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlKUM1wACgkQ1ycZbhPLE2CTbQCfXU/ZGbeQqSvGR47rCJ1iluuY
-ZuUAoKz7aqsP3rxSy62AAFt6ZCkZPTxW
-=kO4U
+iEYEAREIAAYFAlNhGzcACgkQ1ycZbhPLE2BwIACeIE+oBjywi8G+nQADmgTpqD1M
+NCIAn2nB9vz7XCJO5wBfXdZ021A+8YBs
+=Cxaw
 -----END PGP SIGNATURE-----
