@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/pacparser
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/pacparser/ChangeLog,v 1.1 2013/11/26 05:29:31 bicatali Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/pacparser/ChangeLog,v 1.2 2014/04/30 15:48:03 bicatali Exp $
+
+  30 Apr 2014; Sébastien Fabbro <bicatali@gentoo.org> pacparser-1.3.1.ebuild:
+  Removed conflict, bug #509168
 
 *pacparser-1.3.1 (26 Nov 2013)
 
